# eventlog-pretty

./: CHANGELOG.md  cabal.project  eventlog-pretty.cabal
app/: Main.hs
examples/: 16577.eventlog
