cabal-version:      2.4
name:               eventlog-pretty
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sylvain Henry
maintainer:         sylvain@haskus.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable eventlog-pretty
    main-is:          Main.hs

    ghc-options: -Wall

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.16.3.0
                      , ghc-events
                      , text
                      , containers
    hs-source-dirs:   app
    default-language: Haskell2010
